@@ -1,4 +1,4 @@
-#ident "$Id: parse_sun.c,v 1.42 2006/03/08 02:40:22 raven Exp $"
+#ident "$Id: parse_sun.c,v 1.43 2006/03/08 23:56:31 raven Exp $"
 /* ----------------------------------------------------------------------- *
  *   
  *  parse_sun.c - module for Linux automountd to parse a Sun-format
@@ -22,7 +22,6 @@
 #include <fcntl.h>
 #include <unistd.h>
 #include <stdlib.h>
-#include <syslog.h>
 #include <string.h>
 #include <syslog.h>
 #include <ctype.h>
